tests/e2e/semantics/call_expression.error
Error: syntax error in story at line 1, column 1

1|    foobar()
      ^^^^^^

E0112: Function `foobar` has not been declared
